kubernetes/storage/rook-ceph/cluster/app/route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Rook Ceph
    gethomepage.dev/description: Ceph storage cluster dashboard
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: ceph.png
    gethomepage.dev/pod-selector: app=rook-ceph-mgr
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - ceph.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
